--- a/MSME-CMS-Frontend/package.json
+++ b/MSME-CMS-Frontend/package.json
@@ -23,7 +23,7 @@
     "react-router-dom": "^7.5.1",
     "serve": "^14.2.4",
     "sweetalert2": "^11.19.1",
-    "xlsx": "^0.18.5"
+    "xlsx-js-style": "^1.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
