--- a/MSME-CMS-Frontend/.gitignore
+++ b/MSME-CMS-Frontend/.gitignore
@@ -1,40 +1,19 @@
-# Dependencies
+# Dependencies (generated)
 node_modules/
 
-# Environment
+# Environment variables
 .env
 .env.local
 .env.development
 .env.test
 .env.production
 
-# Build output
+# Build output (generated)
 dist/
 build/
-.output/
 
-# Logs
+# Logs (generated)
 *.log
-npm-debug.log*
-cms.log
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
+# OS files
 .DS_Store
-
-# Testing
-coverage/
-.nyc_output/
-
-# Temporary
-tmp/
-temp/
-*.tmp
-
-# Backup files
-*.backup
-*.bak
