--- a/nginx/msme.conf
+++ b/nginx/msme.conf
@@ -8,6 +8,11 @@
 # 4. Test: nginx -t
 # 5. Reload: systemctl reload nginx
 
+# Rate limiting zones (add to http block in nginx.conf if not present)
+# limit_req_zone $binary_remote_addr zone=general:10m rate=10r/s;
+# limit_req_zone $binary_remote_addr zone=api:10m rate=30r/s;
+# limit_conn_zone $binary_remote_addr zone=conn_limit:10m;
+
 # Redirect HTTP to HTTPS
 server {
     listen 80;
@@ -51,6 +56,22 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://maps.googleapis.com https://www.google.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob: https:; connect-src 'self' https://ceec-msme.com https://maps.googleapis.com; frame-src https://www.google.com https://maps.google.com;" always;
+    add_header Permissions-Policy "camera=(), microphone=(), geolocation=()" always;
+    
+    # Hide server version
+    server_tokens off;
+    
+    # Block common exploit paths
+    location ~* /(\.git|\.env|\.htaccess|wp-admin|wp-login|phpMyAdmin|\.php$) {
+        deny all;
+        return 404;
+    }
+    
+    # Block suspicious user agents
+    if ($http_user_agent ~* (wget|curl|nikto|sqlmap|nmap|masscan)) {
+        return 403;
+    }
 
     # Gzip Compression
     gzip on;
