--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -136,6 +136,37 @@ jobs:
           VITE_API_URL: https://api.example.com
 
   # =============================================================================
+  # Firebase Functions Build & Lint
+  # =============================================================================
+  functions-build:
+    name: Functions Build
+    runs-on: ubuntu-latest
+    
+    defaults:
+      run:
+        working-directory: functions
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: functions/package-lock.json
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Lint
+        run: npm run lint
+
+      - name: Build TypeScript
+        run: npm run build
+
+  # =============================================================================
   # Security Scan
   # =============================================================================
   security-scan:
@@ -156,37 +187,32 @@ jobs:
           format: 'table'
 
   # =============================================================================
-  # Deploy (Only on main branch)
+  # Deploy to Firebase (Only on main branch)
   # =============================================================================
   deploy:
-    name: Deploy
+    name: Deploy to Firebase
     runs-on: ubuntu-latest
-    needs: [backend-test, website-build, cms-build]
+    needs: [backend-test, functions-build, website-build, cms-build]
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Deploy notification
-        run: |
-          echo "🚀 Ready for deployment!"
-          echo "All tests passed. Manual deployment to production can proceed."
-          echo ""
-          echo "To deploy:"
-          echo "1. SSH to production server"
-          echo "2. Pull latest changes"
-          echo "3. Run: npm install && pm2 restart msme-backend"
-          echo "4. Rebuild frontends if needed"
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
 
-      # Uncomment and configure for automated deployment:
-      # - name: Deploy to server
-      #   uses: appleboy/ssh-action@master
-      #   with:
-      #     host: ${{ secrets.SERVER_HOST }}
-      #     username: ${{ secrets.SERVER_USER }}
-      #     key: ${{ secrets.SERVER_SSH_KEY }}
-      #     script: |
-      #       cd /var/www/msme
-      #       git pull origin main
-      #       cd MSME-Backend && npm install && pm2 restart msme-backend
+      - name: Install Functions dependencies
+        run: cd functions && npm ci
+
+      - name: Build Functions
+        run: cd functions && npm run build
+
+      - name: Deploy to Firebase
+        uses: w9jds/firebase-action@master
+        with:
+          args: deploy
+        env:
+          GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
